--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -30,3 +30,25 @@ jobs:
       with:
         push: true
         tags: wjma90/myapp:latest
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set permissions for private key
+      run: |
+        echo "${{ env.SSH_KEYPAIR }}" > key.pem
+        chmod 600 key.pem
+    - name: Clean Docker image
+      run: |
+        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@18.208.163.210 'docker rmi -f wjma90/myapp:latest || true'
+    - name: Pull Docker image
+      run: |
+        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@18.208.163.210 'docker pull wjma90/myapp:latest'
+    - name: Stop running container
+      run: |
+        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@18.208.163.210 'sudo docker rm -f $(docker ps -aq) || true'
+    - name: Run new container
+      run: |
+        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@18.208.163.210 'sudo docker run -d -p 80:80 wjma90/myapp'
+    
